tests/errors/lambda_argument_type_mismatch.bd
# Test lambda argument type mismatch
pub my_lambda = \(x: Int!) -> x + 1 
pub result = my_lambda("not a number")
